fix: force user role when importing V2 api with wrong user role
(cherry picked from commit 08210c0322800c1a41717febc2f7be1fa48c90c0)